--- a/205Engine/205Engine_2010.vcxproj
+++ b/205Engine/205Engine_2010.vcxproj
@@ -427,6 +427,8 @@
     <ClCompile Include="Source\BaseApp.cpp" />
     <ClCompile Include="Source\Device.cpp" />
     <ClCompile Include="Source\DeviceContext.cpp" />
+    <ClCompile Include="Source\SwapChain.cpp" />
+    <ClCompile Include="Source\Textrure.cpp" />
     <ClCompile Include="Source\window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -439,6 +441,7 @@
     <ClInclude Include="include\PreRequisites.h" />
     <ClInclude Include="include\Resource.h" />
     <ClInclude Include="include\SwapChain.h" />
+    <ClInclude Include="include\Texture.h" />
     <ClInclude Include="include\window.h" />
     <CLInclude Include="resource.h" />
     <ResourceCompile Include="205Engine.rc" />
