--- a/205Engine/205Engine_2010.vcxproj.filters
+++ b/205Engine/205Engine_2010.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="Source\DeviceContext.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SwapChain.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Textrure.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="205Engine.fx">
@@ -65,6 +71,9 @@
       <Filter>Include</Filter>
     </ClInclude>
     <ClInclude Include="include\SwapChain.h">
+      <Filter>Include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Texture.h">
       <Filter>Include</Filter>
     </ClInclude>
   </ItemGroup>
