--- a/205Engine/205Engine_2010.vcxproj.filters
+++ b/205Engine/205Engine_2010.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="Source\Textrure.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Source\DepthStencilView.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\RenderTargetView.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="205Engine.fx">
@@ -74,6 +80,12 @@
       <Filter>Include</Filter>
     </ClInclude>
     <ClInclude Include="include\Texture.h">
+      <Filter>Include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DepthStencilView.h">
+      <Filter>Include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\RenderTargetView.h">
       <Filter>Include</Filter>
     </ClInclude>
   </ItemGroup>
