--- a/205Engine/205Engine_2010.vcxproj
+++ b/205Engine/205Engine_2010.vcxproj
@@ -424,11 +424,13 @@
   <ItemGroup />
   <ItemGroup>
     <ClCompile Include="205Engine.cpp" />
+    <ClCompile Include="include\InputLayout.cpp" />
     <ClCompile Include="Source\BaseApp.cpp" />
     <ClCompile Include="Source\DepthStencilView.cpp" />
     <ClCompile Include="Source\Device.cpp" />
     <ClCompile Include="Source\DeviceContext.cpp" />
     <ClCompile Include="Source\RenderTargetView.cpp" />
+    <ClCompile Include="Source\ShaderProgram.cpp" />
     <ClCompile Include="Source\SwapChain.cpp" />
     <ClCompile Include="Source\Textrure.cpp" />
     <ClCompile Include="Source\Viewport.cpp" />
@@ -442,9 +444,11 @@
     <ClInclude Include="include\DepthStencilView.h" />
     <ClInclude Include="include\Device.h" />
     <ClInclude Include="include\DeviceContext.h" />
+    <ClInclude Include="include\InputLayout.h" />
     <ClInclude Include="include\PreRequisites.h" />
     <ClInclude Include="include\RenderTargetView.h" />
     <ClInclude Include="include\Resource.h" />
+    <ClInclude Include="include\ShaderProgram.h" />
     <ClInclude Include="include\SwapChain.h" />
     <ClInclude Include="include\Texture.h" />
     <ClInclude Include="include\Viewport.h" />
