--- a/205Engine/205Engine_2010.vcxproj.filters
+++ b/205Engine/205Engine_2010.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="include\ModelLoader.h">
       <Filter>Include</Filter>
     </ClInclude>
+    <ClInclude Include="include\stb_image.h">
+      <Filter>Include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
